ocaml-batteries (1.1.0-2) unstable; urgency=low

  * Add myself to Uploaders (and remove Zack as he asked).

 -- Mehdi Dogguy <mehdi@debian.org>  Wed, 02 Jun 2010 14:32:05 +0200

ocaml-batteries (1.1.0-1) unstable; urgency=low

  * New upstream release
    - major changes, "diet" version of the library
    - fix old FTBFS error, due to major code changes (Closes: #569455)
  * Revamp packaging
    - adapt to new stuff shipped by upstream
    - switch from CDBS to dh
    - adapt dependencies (generally: reduce them)
  * debian/patches/
    - remove old debian/patches/{debian-specific-installation-paths,
      debian-specific-info-on-doc-availability} as obsolete
    - new patch 0001-install-fix-for-bytecode-only-build: avoid
      installing *.a files with bytecode only compilation
  * debian/libbatteries-ocaml-dev.links: remove file, shortend
    /usr/bin/ocaml-batteries to the top-level no longer exists
  * remove debian/README.Debian (previous content is now obsolete)
  * bump Standards-Version to 3.8.4 (no changes needed)
  * debian/watch: update to match new upstream version convention
  * debian/libbatteries-ocaml-{dev,doc}.{docs,examples}: ship only doc
    file from the root dir, other stuff is currently out of date
    (Closes: #514265)

 -- Stefano Zacchiroli <zack@debian.org>  Sat, 06 Mar 2010 16:03:38 +0100

ocaml-batteries (0.20090405+beta1-5) unstable; urgency=low

  * debian/control: add explicit dep on libbin-prot-camlp4-dev, it is a
    needed CamlP4 dep, not inferrable by dh_ocaml (Closes: #557538)

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 25 Nov 2009 13:11:18 +0100

ocaml-batteries (0.20090405+beta1-4) unstable; urgency=low

  * Get rid of TopGit for packaging, use dom-{save,apply}-patches to
    manage quilt series. Document that in README.source. Patch names are
    now as follows:
    - 0001-debian-specific-installation-paths
    - 0002-debian-specific-info-on-doc-availability